--- a/frontend/src/style/utils/_variable.scss
+++ b/frontend/src/style/utils/_variable.scss
@@ -1,10 +1,11 @@
 // Color
-$white: #fff;
+$white: #f1f1f1;
 $blueBg: #171B24;
 $yellow: #FFE24C;
 $darkLight: #0E0F10;
 $darkBlack: #070708;
 $gray: #686868;
+$errorRed: #EF5350;
 
 
 // FontSize
