--- a/frontend/src/style/components/layout/_navbar.scss
+++ b/frontend/src/style/components/layout/_navbar.scss
@@ -11,6 +11,7 @@
     margin: 20px auto;
     min-width: 1200px;
     width: 100%;
+    z-index: 900;
     transition:
         color 0.5s ease 1s,
         transform 0.8s ease-in-out;
@@ -64,7 +65,7 @@
         display: inline-block;
         margin: 0 20px;
         font-family: $fontRobotoMono;
-        font-weight: 500;
+        font-weight: 300;
         color: $white;
         letter-spacing: -1px;
         text-decoration: none;
@@ -76,7 +77,7 @@
         position: absolute;
         top: -100%;
         right: 0;
-        font-weight: 300;
+        font-weight: 100;
         font-size: $fontsizeNavbar - 5px;
     }
 
