--- a/frontend/src/style/pages/_home.scss
+++ b/frontend/src/style/pages/_home.scss
@@ -1,5 +1,5 @@
 .homePage {
-    background-image: url("public/HomeBackground.png");
+    background-image: url("assets/HomeBackground.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
