--- a/frontend/src/style/pages/_admin_login.scss
+++ b/frontend/src/style/pages/_admin_login.scss
@@ -3,6 +3,7 @@
     height: 100vh;
     width: 100vw;
     position: relative;
+    overflow: hidden;
 
     .admin_login_form {
         background-color: $darkBlack;
