--- a/frontend/src/style/pages/_home.scss
+++ b/frontend/src/style/pages/_home.scss
@@ -1,115 +1,164 @@
-.homePage {
-    background-image: url("assets/HomeBackground.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    height: 120vh;
-
+body {
     background-color: $blueBg;
+    .homePage {
+        height: 100vh;
 
-    .container {
-        @include container;
-
-
-        .home_main {
+        &::before {
+            content: '';
+            background-image: url('../../assets/images/HomeBackground.png');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
             position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            text-align: center;
+            top: 0px;
+            right: 0px;
+            bottom: 0px;
+            left: 0px;
+            opacity: 0;
+            animation: homePage_background 1s ease-in 2s forwards;
 
-            & h1 {
-                font-family: $fontPoppins;
-                font-weight: 600;
-                font-size: 160px;
-                color: $white;
+            @keyframes homePage_background {
+                0% {
+                    opacity: 0;
+                }
+                100% {
+                    opacity: 1;
+                }
+            }
+        }
 
-                @include tablet {
+        .container {
+            @include container;
+
+            .home_main {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                text-align: center;
+
+                .home_title {
+                    font-family: $fontPoppins;
+                    font-weight: 600;
                     font-size: 120px;
+                    color: $white;
+                    text-transform: uppercase;
+
+                    @include tablet {
+                        font-size: 120px;
+                    }
+
+                    @include mobile {
+                        font-size: 60px;
+                    }
                 }
 
-                @include mobile {
-                    font-size: 60px;
+                .home_title::before {
+                    content: '';
+                    width: 0;
+                    display: block;
+                    height: 5px;
+                    top: -5%;
+                    right: -10px;
+                    position: absolute;
+                    background: $yellow;
+                    border-radius: 10px;
+                    animation: animate_h1_before 1s ease-out forwards 1s;
+
+                    @keyframes animate_h1_before {
+                        0% {
+                            width: 0;
+                        }
+                        100% {
+                            width: 30%;
+                        }
+                    }
+                }
+
+                & p {
+                    text-transform: uppercase;
+                    color: $white;
+                    font-size: 30px;
+                    font-family: $fontRobotoMono;
+
+                    @include tablet {
+                        font-size: 25px;
+                    }
+
+                    @include mobile {
+                        font-size: 15px;
+                    }
+                }
+
+                & p::after {
+                    content: '';
+                    width: 0;
+                    display: block;
+                    height: 5px;
+                    bottom: -15%;
+                    left: -10px;
+                    position: absolute;
+                    background: $yellow;
+                    border-radius: 10px;
+
+                    animation: animate_p_before 1s ease-out forwards 1s;
+
+                    @keyframes animate_p_before {
+                        0% {
+                            width: 0;
+                        }
+                        100% {
+                            width: 30%;
+                        }
+                    }
                 }
             }
 
-            & h1::before {
-                content: '';
-                width: 30%;
-                display: block;
-                height: 5px;
-                top: -5%;
-                right: -10px;
-                position: absolute;
-                background: $yellow;
-                border-radius: 10px;
+            .home_media {
+                display: flex;
+                flex-direction: column;
+                position: fixed;
+                left: 100px;
+                bottom: 150px;
 
-            }
+                &::after {
+                    content: '';
+                    width: 2px;
+                    height: 140px;
+                    bottom: -150px;
+                    left: 45%;
+                    position: absolute;
+                    background: $white;
+                    animation: animate_media_after 1s ease-out;
 
-            & p {
-                text-transform: uppercase;
-                color: $white;
-                font-size: 36px;
-                font-family: $fontRobotoMono;
+                    @keyframes animate_media_after {
+                        0% {
+                            height: 0;
+                        }
+                        100% {
+                            height: 140px;
+                        }
+                    }
+                }
 
                 @include tablet {
-                    font-size: 25px;
+                    left: 20px;
                 }
-                
+
                 @include mobile {
-                    font-size: 15px;
+                    display: none;
                 }
             }
 
-            & p::after {
-                content: '';
-                width: 30%;
-                display: block;
-                height: 5px;
-                bottom: -15%;
-                left: -10px;
+            .home_mouseIcon {
                 position: absolute;
-                background: $yellow;
-                border-radius: 10px;
-            }
-        }
+                bottom: 0;
+                left: 50%;
+                transform: translate(-50%, -50%);
 
-
-        .home_media {
-            display: flex;
-            flex-direction: column;
-            position: fixed;
-            left: 100px;
-            bottom: 150px;
-
-            &::after {
-                content: '';
-                width: 2px;
-                height: 140px;
-                bottom: -150px;
-                left: 45%;
-                position: absolute;
-
-                background: $white;
-            }
-
-            @include tablet {
-                left: 20px;
-            }
-
-            @include mobile {
-                display: none;
-            }
-        }
-
-        .home_mouseIcon {
-            position: absolute;
-            bottom:0;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            
-            & img {
-                width: 24px;
+                & img {
+                    width: 24px;
+                }
             }
         }
     }
