--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -5,10 +5,12 @@
 
 @import 'components/layout/navbar';
 @import 'components/layout/button_nav';
+@import 'components/layout/loader';
 
 @import 'components/home/about';
 @import 'components/home/skills';
 
+@import 'components/admin/modal_project';
 @import 'components/admin/sidebar';
 @import 'components/admin/skills';
 @import 'components/admin/projects';
