--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -10,6 +10,7 @@
 @import 'components/home/about';
 @import 'components/home/skills';
 
+@import 'components/admin/card_project';
 @import 'components/admin/modal_project';
 @import 'components/admin/sidebar';
 @import 'components/admin/skills';
