Fix the problem with thr resizing sharp

--- a/frontend/src/style/components/admin/_projects.scss
+++ b/frontend/src/style/components/admin/_projects.scss
@@ -24,6 +24,10 @@
     .projects_list {
         .project_item {
             margin-bottom: 50px;
+
+            .project_item_image {
+                width: 130px;
+            }
         }
     }
 }
