Ajout de l'affichage des projets dans le dashboard

--- a/frontend/src/style/components/admin/_modal_project.scss
+++ b/frontend/src/style/components/admin/_modal_project.scss
@@ -66,6 +66,7 @@
                     height: 100px;
                     resize: none;
                     padding: 10px;
+                    font-family: $fontRobotoMono;
 
                     &::-webkit-scrollbar-track {
                         margin-block: 1px;
