--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -9,8 +9,10 @@
 
 @import 'components/home/about';
 @import 'components/home/skills';
+@import 'components/home/projects';
+@import 'components/home/project_card';
+@import 'components/home/service';
 
-@import 'components/admin/card_project';
 @import 'components/admin/modal_project';
 @import 'components/admin/sidebar';
 @import 'components/admin/skills';
