--- a/frontend/src/style/components/admin/_modal_project.scss
+++ b/frontend/src/style/components/admin/_modal_project.scss
@@ -66,7 +66,8 @@
                     height: 100px;
                     resize: none;
                     padding: 10px;
-                    font-family: $fontRobotoMono;
+                    font-family: sans-serif;
+                    line-height: 20px;
 
                     &::-webkit-scrollbar-track {
                         margin-block: 1px;
