--- a/frontend/src/style/components/admin/_projects.scss
+++ b/frontend/src/style/components/admin/_projects.scss
@@ -12,7 +12,8 @@
         width: 550px;
 
         @include tablet {
-            font-size: 80px;
+            font-size: 50px;
+            width: 350px;
         }
     }
 
@@ -32,14 +33,34 @@
         font-family: $fontRobotoMono;
         font-size: 15px;
         letter-spacing: -1px;
+
+        @include mobile {
+            width: 75%;
+            margin: 0 50px;
+            margin-bottom: 15px;
+        }
     }
 
     .projects_list {
-        height: 100%;
+        height: 500px;
         border-top: 2px solid #1a1d1f;
         border-bottom: 2px solid #1a1d1f;
         margin: 0 100px;
+        position: relative;
+
+        @include mobile {
+            margin: 0 50px;
+        }
+
         @include scrollbar;
+
+        .projects_message {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-family: $fontRobotoMono;
+        }
 
         .project_item {
             display: flex;
@@ -48,8 +69,12 @@
             padding: 30px 0;
             
             .project_item_title {
+                color: #fff;
+                font-family: $fontPoppins;
+                font-size: 16px;
+                font-weight: 500;
+                width: 400px;
                 text-align: center;
-                width: 100px;
             }
 
             &:not(:first-child) {
