--- a/frontend/src/style/components/home/_skills.scss
+++ b/frontend/src/style/components/home/_skills.scss
@@ -1,9 +1,14 @@
 .skills_container {
-    height: auto;
+    height: 100vh;
     background-image: url('../../../assets/images/skills_background.jpg');
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
+    background-position: center;
     padding: 25px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
     .skills_title {
         position: relative;
@@ -67,6 +72,11 @@
     white-space: nowrap;
     height: 20px;
     font-family: $fontKanit;
+    transition: background-color 0.3s ease-in-out;
+
+    &:hover {
+        background-color: #302f2f;
+    }
 
     img {
         width: 18px;
