--- a/frontend/src/style/components/layout/_navbar.scss
+++ b/frontend/src/style/components/layout/_navbar.scss
@@ -1,24 +1,30 @@
 .navbarComponent {
     display: flex;
+    background-color: transparent;
     font-size: $fontsizeNavbar;
-    padding: 100;
+    padding: 20px 0;
     justify-content: space-between;
     align-items: center;
     height: 75px;
     position: fixed;
     top: 0;
     left: 0;
-    margin: 20px auto;
     min-width: 1200px;
     width: 100%;
     z-index: 900;
     transition:
         color 0.5s ease 1s,
-        transform 0.8s ease-in-out;
+        transform 0.8s ease-in-out, background-color 0.3s ease-in-out, padding 0.3s ease-in-out;
 
     @include tablet {
         opacity: 0;
         transform: translateX(-100%);
+    }
+
+    &.navbar_background {
+        background: $blueBg;
+        box-shadow: 0 5px 20px 5px rgba(0,0,0,.25);
+        padding: 5px;
     }
 
     .navbar_logo img {
