--- a/frontend/src/style/components/home/_projects.scss
+++ b/frontend/src/style/components/home/_projects.scss
@@ -1,46 +1,50 @@
 .projects_container {
-    .projects_title {
-        position: relative;
+  .projects_title {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: $fontKanit;
+    padding: 60px 0;
+    position: relative;
+
+    .projects_bigTitle {
+      @include bigTille;
+    }
+
+    .projects_littleTitle {
+      @include littleTille;
+    }
+  }
+
+  .projects_main {
+    .projects_main_image {
+      display: flex;
+      justify-content: center;
+
+      img {
+        width: 600px;
+        margin-top: -50px;
+
+        @include mobile {
+          width: 400px;
+        }
+      }
+    }
+
+    .projects_list {
+      margin-top: -50px;
+      margin-bottom: 50px;
+
+      .projects_button {
         display: flex;
-        align-items: center;
         justify-content: center;
-        font-family: $fontKanit;
-        padding: 60px 0;
-        position: relative;
+        margin-top: 50px;
 
-        .projects_bigTitle {
-            @include bigTille;
+        button {
+          @include button_submit;
         }
-
-        .projects_littleTitle {
-            @include littleTille;
-        }
+      }
     }
-
-    .projects_main {
-        .projects_main_image {
-            display: flex;
-            justify-content: center;
-
-            img {
-                width: 600px;
-                margin-top: -50px;
-            }
-        }
-
-        .projects_list {
-            margin-top: -50px;
-            margin-bottom: 50px;
-
-            .projects_button {
-                display: flex;
-                justify-content: center;
-                margin-top: 50px;
-
-                button {
-                    @include button_submit;
-                }
-            }
-        }
-    }
+  }
 }
